--- a/src/index.css
+++ b/src/index.css
@@ -248,6 +248,7 @@ body::-webkit-scrollbar {
   position: relative;
   /* height: 100%; */
   flex: 1;
+  min-height:140px;
   display: flex;
   flex-direction: column;
 
